[package]
name = "cline-auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
webbrowser = "0.8"
anyhow = "1.0"
thiserror = "1.0"
# Note: Firebase SDK for Rust is not as mature as Node.js version
# We use direct REST API calls instead for token refresh
